# Raytracer

./: .gitignore  CMakeLists.txt  README.md  a.out  bof.cpp  note.txt  raytracer_documentation.md
app/: main.cpp
includes/: Color.hpp  Material.hpp  Ray.hpp  Vecteur.hpp  conf.hpp  my.hpp
scenes/: basic.cfg  basic_test.cfg  castle_scene_plan.cfg  cone_test.cfg
src/: Factory.cpp  Factory.hpp  PluginsLoader.cpp  PluginsLoader.hpp  Raytracer.cpp  Raytracer.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
src/base/camera/: Camera.cpp  Camera.hpp
src/base/lights/: DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp
src/base/primitives/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
src/extra/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp
src/interfaces/: ALight.hpp  APrimitive.hpp  ICamera.hpp  ILight.hpp  IPrimitive.hpp
test/: lights_test.cpp
tests/: camera_test.cpp  cone_test.cpp  factory_test.cpp  main.cpp  scene_test.cpp
utilitaires/: utilitaires.cpp  vector_operation.cpp
